# luduvo-rs

./: .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml  zensical.toml
.github/workflows/: cargo-publish.yml  cargo-qa.yml  cargo.yml  docs.yml  ldh-webhook.yml
docs/: contributors.md  features.md  index.md  need-help.md  quick-start.md
docs/api/ungrouped/: index.md  places.md
docs/api/users/: friends.md  index.md  profile.md  query.md
docs/tutorials/: index.md
docs/tutorials/ungrouped/: places.md  prelude.md
docs/tutorials/users/: friends.md  profile.md  query.md
examples/: friends.rs  get_friends.rs  get_profile.rs  places.rs  profile.rs  query.rs
src/: lib.rs  places.rs  prelude.rs
src/users/: friends.rs  mod.rs  profile.rs  query.rs
tests/: friends.rs  places.rs  profile.rs  profiles.rs  query.rs  root.rs  users.rs
tests/users/: friends.rs  mod.rs  profile.rs  query.rs
