[package]
name = "luduvo-rs"
description = "a rust library for interacting with the luduvo api"
version = "0.1.1"
authors = ["primiti_ve"]
readme = "./README.md"
repository = "https://github.com/Primiti-ve/luduvo-rs"
license = "MIT"
edition = "2024"

[dependencies]
reqwest = { version = "=0.13.2", features = ["json", "blocking"] }
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.18"

[dev-dependencies]
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread"] }
