[package]
name = "luduvo-rs"
description = "a rust library for interacting with the luduvo api"
version = "0.4.0"
authors = ["primiti_ve"]
readme = "README.md"
repository = "https://github.com/Primiti-ve/luduvo-rs"
license = "MIT"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[features]
default = ["users", "places"]
users = [
    "friends",
    "profile",
    "query"
]
friends = []
profile = []
query = []
places = []
